# 6502_emulator

./: CMakeLists.txt  LICENSE  README.md
include/: 6502_basic_structures.h  6502_debug.h  6502_decoder.h  6502_instructions.h  6502_utilities.h  terminal.h
src/: 6502_debug.c  6502_decoder.c  6502_instructions.c  6502_utilities.c  main.c  terminal.c
